crates/vvv/tests/corpus/snapshots/rust-navigation__navigate-bad-selection__human.snap
---
source: crates/vvv/tests/corpus.rs
expression: "corpus.run(args, false)"
---
exit 1
--- stdout ---
--- stderr ---
✗ no match numbered 3; the search found 2
