crates/vvv/tests/corpus/snapshots/rust-navigation__navigate-bad-selection__json.snap
---
source: crates/vvv/tests/corpus.rs
expression: "self.run(args, true)"
---
exit 1
--- stdout ---
{"code":"bad_selection","message":"no match numbered 3; the search found 2","schema":1,"status":"error"}
--- stderr ---
